--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -6,31 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="webjars/jquery/3.0.0/jquery.js"></script>
     <script src="books.js"></script>
-    <!--<link rel="stylesheet" href="table.css">-->
     <link rel="stylesheet" href="webjars/bootstrap/4.3.1/css/bootstrap.css"/>
     <script src="webjars/popper.js/1.14.3/popper.js" ></script>
     <script src="webjars/bootstrap/4.3.1/js/bootstrap.js"></script>
 </head>
 <body>
     <div class="container">
-        <div th:insert="~{/fragments/header :: insert}"></div>
-        <h2>Список книг библиотеки</h2>
-        <button type="button" id="addBtn" class="btn btn-primary text-light">
-            Добавить книгу
-        </button>
-        <table class="table-responsive-md bg-info text-white table-hover ">
-            <thead class="thead-dark">
-            <tr>
-                <th>ISN</th>
-                <th id="author_th">Автор</th>
-                <th id="title_th">Название</th>
-                <th>Кем взята</th>
-                <th>Удалить</th>
-            </tr>
-            </thead>
-            <tbody id="t_body"></tbody>
-        </table>
-        <button id="showMore" type="button" class="btn btn-outline-primary">Показать ещё</button>
+        <div th:insert="~{fragments/header :: insert}"></div>
+        <div class="row">
+            <div class="col-xl-12">
+                <h2 class="mt-3">Список книг библиотеки</h2>
+                <button type="button" id="addBtn" class="btn btn-primary text-light my-2">
+                    Добавить книгу
+                </button>
+                <table class="table-dark table-bordered table-striped">
+                    <thead class="thead-dark text-center">
+                    <tr>
+                        <th style="width: 15%">ISN</th>
+                        <th style="width: 30%"  id="author_th">Автор</th>
+                        <th style="width: 42%" id="title_th">Название</th>
+                        <th style="width: 13%">Кем взята</th>
+                        <th style="width: 15%">Удалить</th>
+                    </tr>
+                    </thead>
+                    <tbody id="t_body"></tbody>
+                </table>
+                <button id="showMore" type="button" class="btn btn-success my-2">Показать ещё</button>
+            </div>
+        </div>
     </div>
     <div id="BookModal"></div>
 </body>
