--- a/src/main/resources/templates/user_form.html
+++ b/src/main/resources/templates/user_form.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div class="modal fade" id="UserModal">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title" th:with="text=${user.username==null} ? 'Добавление новой пользователя' : 'Изменение пользователя'"
@@ -17,22 +17,20 @@
                                 th:text="${err}">Input is incorrect</li>
                         </ul>
                     </div>
-                    <label th:class="${#fields.hasErrors('username')}? 'error'">
-                        Имя пользователя</label>
-                    <input type="text" onchange="this.value = $.trim(this.value)" th:field="*{username}"
+                    <label th:class="${#fields.hasErrors('username')}? 'error'">Имя пользователя</label>
+                    <input style="margin-left: 2%; width: 60%;" type="text" onchange="this.value = $.trim(this.value)" th:field="*{username}"
                            th:class="${#fields.hasErrors('username')}? 'error'"/><br/>
-                    <label th:class="${#fields.hasErrors('password')}? 'error'">
-                        Пароль</label>
-                    <input type="password" onchange="this.value = $.trim(this.value)" th:field="*{password}"
+                    <label th:class="${#fields.hasErrors('password')}? 'error'">Пароль</label>
+                    <input style="margin-left: 19%; width: 280px;" type="password" onchange="this.value = $.trim(this.value)" th:field="*{password}"
                            th:class="${#fields.hasErrors('password')}? 'error'"/><br/>
                 </form>
                 <div class="modal-footer">
                     <span th:switch="${user.username==null}">
                         <span th:case="true">
-                            <button type="submit" class="send btn btn-primary" value="/users/new">Сохранить</button>
+                            <button type="submit" class="send btn btn-success" value="/users/new">Сохранить</button>
                         </span>
                         <span th:case="false">
-                            <button type="submit" class="send btn btn-primary" value="/users/edit">Изменить</button>
+                            <button type="submit" class="send btn btn-success" value="/users/edit">Изменить</button>
                         </span>
                     </span>
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Отмена</button>
