--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-    <div class="btn-group btn-group-lg justify-content-center" th:fragment="insert">
-        <ul class="nav">
-            <li class="nav-item"><a class="btn btn-dark" href="books">Книги</a></li>
-            <li class="nav-item"><a class="btn btn-dark" href="users">Пользователи</a></li>
-        </ul>
+    <div class="row" th:fragment="insert">
+        <div class="col-xl-5"></div>
+        <div class="col-xl-2">
+            <div class="btn-group ">
+                <a class="btn btn-info" href="books">Книги</a>
+                <a class="btn btn-info" href="users">Пользователи</a>
+            </div>
+        </div>
+        <div class="col-xl-5"></div>
     </div>
 </body>
 </html>
