--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -10,27 +10,38 @@
     <script src="webjars/bootstrap/4.3.1/js/bootstrap.js"></script>
 </head>
 <body>
-    <div th:insert="~{/fragments/header :: insert}"></div>
-    <h2>Список пользователей библиотеки</h2>
-    <button type="button" id="addBtn" class="btn btn-primary text-light">
-        Добавить пользователя
-    </button>
-    <table>
-        <thead>
-            <tr>
-                <th>Имя пользователя</th>
-                <th>Удалить</th>
-            </tr>
-        </thead>
-        <tbody id="t_body">
-            <tr id="tr_table" th:each="user : ${user_list}">
-                <td id="name" th:text="${user.username}"></td>
-                <td>
-                    <button class="del" th:value="${user.username}" type="submit">удалить</button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container">
+        <div th:insert="~{fragments/header :: insert}"></div>
+        <div class="row">
+            <div class="col-xl-12">
+                <h2 class="mt-3">Список пользователей библиотеки</h2>
+                <button type="button" id="addBtn" class="btn btn-primary text-light my-2">
+                    Добавить пользователя
+                </button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-3">
+                <table class="table-sm table-hover">
+                    <thead class="bg-dark text-white">
+                    <tr>
+                        <th class="text-center">Имя пользователя</th>
+                        <th>Удалить</th>
+                    </tr>
+                    </thead>
+                    <tbody id="t_body">
+                    <tr id="tr_table" th:each="user : ${user_list}">
+                        <td id="name" th:text="${user.username}"></td>
+                        <td>
+                            <button class="del btn btn-danger btn-block" th:value="${user.username}" type="submit">&times;</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-xl-9"></div>
+        </div>
+    </div>
     <div id="UserModal"></div>
 </body>
 </html>
